k8/angular-service.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end-deployment-service
  # namespace: qa
  labels:
    version: 1.0.0
    product: speech-front-end
    environment: qa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: speech-front-end
    env: qa
